Release CMTK-1.1.1:

- Added: "congeal" and "congeal_warp" now optionally match image histograms to
    either template data (if template data is used for registration) or first
    image (if no template is defined or its data is not used).

- Improved: command line options for "congeal" and "congeal_warp" tools
    streamlined and grouped.


Release CMTK-1.1.0 (2009-08-26):

- API: no longer allow short-only options for command lines.
- API: cmtk::SmartPointer now supports smart pointers to constant objects for
    improved const-consistency.
- API: begin decoupling the actual transformation classes (e.g.,
    SplineWarpXform) from their reference image grids (used for
    precomputations). Instead, use classes like the new
    SplineWarpXformUniformVolume to tie both together, thus allowing more
    transformation objects to remain const in more situations (see, for
    example, modified implementation of ReformatVolume::WarpXform).
- API: all "...NonVirtual" member functions replaced their virtual
    counterparts and became virtual themselves.
- API: decoupled VTK and non-VTK landmark code so only one tool,
    align_landmarks, still needs to be linked against the VTKWrapper and VTK 
    libraries.
- API: re-worked progress reporting to support multiple-level nested tasks
- API: removed some residual legacy preprocessor definitions

- Changed: command line tools now need to "opt-in" for XML support. This is to
    prevent cluttering Slicer's menu with modules that do not actually support
    it.
- Changed: finally eliminated all those affine transformation inversions in
    the rigid registration framework that have been a pain for over ten
    years. CAUTION! This changes the outcomes of both affine and warp
    registrations, usually just slightly, but in unstable cases potentially by
    a lot.

- Fixed: mk_analyze_hdr command line option "--description" was broken.
- Fixed: contrary to the Wiki, NMI was the default registration criterion used